--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,9 @@
-* {
-  background-color: #291381;
-  color: white;
+*, html, body, header {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   /* background: rgb(0 100 0 / 0.1) !important; */
+  /* outline: 3px solid limegreen !important; */
 }
 
 .logo {
@@ -19,8 +18,233 @@
   align-items: center;
 }
 
-/* .pfpImg {
-  object-fit: contain;
-  width: 100%;
+.hamburger {
+/*  */
+}
+
+.main {
   height: 100vh;
-} */
+}
+
+.mainPanel {
+  /* border: 1px solid red; */
+  position: relative;
+  height: 100%;
+  padding: 3rem 0;
+}
+
+.pfpImg {
+  position: absolute;
+  bottom: 0;
+  height: 50%;
+}
+
+/* PANEL STYLES */
+@media screen and (min-width: 900px) {
+
+  .hamburger {
+    display: none;
+  }
+
+  .main {
+    display: flex;
+    flex-wrap: wrap;
+    /* overflow: scroll; */
+  }
+
+  .mainPanel {
+    z-index: 10;
+  }
+
+  .red {
+    border: 1px solid red;
+  }
+
+  .active {
+    width: 88% !important;
+  }
+
+  .panel {
+    position: relative;
+    display:flex;
+    flex-direction:column;
+    min-height:100%;
+    width:4%;
+    transition: all 0.5s ease;
+  }
+
+  .purple {
+    background-color: #6202EE;
+    z-index:75;
+  }
+
+  .blue {
+    background-color: #4739EB;
+    z-index: 50;
+  }
+
+  .green {
+    background-color: #01FFA3;
+    z-index: 25;
+  }
+}
+
+/* RESIZE IMAGE FOR DIFFERENT SCREEN SIZES */
+@media screen and (min-width: 370px) {
+  .pfpImg {
+    height: 60%;
+  }
+}
+
+@media screen and (min-width: 510px) {
+  .pfpImg {
+    height: 70%;
+  }
+}
+
+@media screen and (min-width: 665px) {
+  .pfpImg {
+    height: 80%;
+  }
+}
+
+.title {
+  font-size: 4rem;
+  line-height: 4rem;
+  text-align: center;
+}
+
+@media screen and (min-width: 1920px) {
+  .title {
+    font-size: 5.5rem;
+    line-height: 5.5rem;
+  }
+}
+
+/* ACCENTS */
+
+.accent1 {
+  position:absolute;
+  filter: blur(20px);
+  border-radius: 100%;
+  background-color: #6202EE;
+  width: 25rem;
+  height: 20rem;
+  left: -7rem;
+  top: -12rem;
+  z-index: -100;
+}
+
+.accent2 {
+  position:absolute;
+  filter: blur(35px);
+  border-radius: 100%;
+  background-color: #4739EB;
+  width: 10rem;
+  height: 10rem;
+  left: 0;
+  top: 2.5rem;
+  z-index: -50;
+}
+
+.accent3 {
+  position:absolute;
+  filter: blur(25px);
+  border-radius: 100%;
+  background-color: #01FFA3;
+  width: 10rem;
+  height: 10rem;
+  top: 6rem;
+  left: -3rem;
+  z-index: -75;
+}
+
+@media screen and (min-width: 600px) {
+  .accent1 {
+    filter: blur(40px);
+    width: 32rem;
+    height: 26rem;
+    top: -16rem;
+  }
+
+  .accent2 {
+    filter: blur(40px);
+    width: 16rem;
+    height: 16rem;
+    left: -3rem;
+    top: 1rem;
+  }
+
+  .accent3 {
+    width: 12rem;
+    height: 12rem;
+    top: 10rem;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .accent1 {
+    /* filter: blur(40px);
+    width: 32rem;
+    height: 26rem;
+    top: -16rem; */
+    width: 40rem;
+    top: -17rem;
+    left: -10rem;
+  }
+
+  .accent2 {
+    /* filter: blur(40px);
+    width: 16rem;
+    height: 16rem;
+    left: -3rem;
+    top: 1rem; */
+    filter: blur(50px);
+    width: 18rem;
+    height: 18rem;
+    top: -1rem;
+    left: -3rem;
+  }
+
+  .accent3 {
+    /* width: 12rem;
+    height: 12rem;
+    top: 10rem; */
+    width: 14rem;
+    height: 14rem;
+    top: 10rem;
+  }
+}
+
+@media screen and (min-width: 1500px) {
+  .accent1 {
+    /* width: 40rem;
+    top: -17rem;
+    left: -10rem; */
+    width: 50rem;
+    height: 30rem;
+  }
+
+  .accent2 {
+    /* filter: blur(50px);
+    width: 18rem;
+    height: 18rem;
+    top: -1rem;
+    left: -3rem; */
+    width: 30rem;
+    height: 20rem;
+    top: 3rem;
+    left: -14rem;
+  }
+
+  .accent3 {
+    /* width: 14rem;
+    height: 14rem;
+    top: 10rem; */
+    filter: blur(45px);
+    width: 14rem;
+    height: 14rem;
+    left: -6rem;
+    top: 18rem;
+  }
+}
