--- a/src/App.module.css
+++ b/src/App.module.css
@@ -54,6 +54,11 @@
 
   .mainPanel {
     z-index: 10;
+    transition: all 0.5s ease;
+  }
+
+  .hideMainPanel {
+    display: none;
   }
 
   .red {
@@ -65,6 +70,7 @@
   }
 
   .panel {
+    cursor: pointer;
     position: relative;
     display:flex;
     flex-direction:column;
