--- a/src/App.module.css
+++ b/src/App.module.css
@@ -36,11 +36,49 @@
 .pfpImg {
   position: absolute;
   bottom: 0;
-  height: 50%;
+  height: 60%;
+}
+
+.centerContent {
+  display: grid;
+  place-items: center;
+}
+
+.socials {
+  padding: 1rem 0.25rem;
+}
+
+.red {
+  border: 3px solid red;
+}
+
+.purple {
+  display: none;
+}
+
+/* HEADLINE */
+.title {
+  font-size: 3rem;
+  line-height: 3rem;
+  text-align: center;
+}
+
+@media screen and (min-height: 900px) {
+  .title {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .title {
+    font-size: 5.5rem;
+    line-height: 5.5rem;
+  }
 }
 
 /* PANEL STYLES */
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1100px) {
 
   .hamburger {
     display: none;
@@ -57,12 +95,8 @@
     transition: all 0.5s ease;
   }
 
-  .hideMainPanel {
+  .hidePanel {
     display: none;
-  }
-
-  .red {
-    border: 1px solid red;
   }
 
   .active {
@@ -76,12 +110,71 @@
     flex-direction:column;
     min-height:100%;
     width:4%;
-    transition: all 0.5s ease;
+    transition: all 0.8s ease;
+  }
+
+  .panelTitle {
+    font-size: 3rem;
+    font-weight: 300;
+    text-align: left;
+    padding: 3rem 3rem;
+    color: white;
   }
 
   .purple {
     background-color: #6202EE;
     z-index:75;
+  }
+
+  @keyframes fade {
+    0% {
+      opacity: 0;
+    }
+    80% {
+      opacity: 0.5;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  .roadmapGrid {
+    color: white;
+    font-weight: 300;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1.5rem;
+    padding: 2rem;
+    animation-name: fade;
+    animation-duration: 1s;
+  }
+
+  .roadmapGrid h3 {
+    font-size: 4rem;
+    font-weight: 900;
+    color: #291381;
+    padding: 2.5rem 0;
+  }
+
+  .roadmapGrid h5 {
+    font-size: 1.7rem;
+    padding: 0.7rem 0;
+  }
+
+  .roadmapGrid p {
+    font-size: 1.2rem;
+  }
+
+  .gridColSpan4 {
+    grid-column: span 4;
+  }
+
+  .gridColSpan2 {
+    grid-column: span 2;
+  }
+
+  .gridRowSpan2 {
+    grid-row: span 2;
   }
 
   .blue {
@@ -96,9 +189,9 @@
 }
 
 /* RESIZE IMAGE FOR DIFFERENT SCREEN SIZES */
-@media screen and (min-width: 370px) {
+@media screen and (min-width: 360px) {
   .pfpImg {
-    height: 60%;
+    height: 65%;
   }
 }
 
@@ -114,18 +207,6 @@
   }
 }
 
-.title {
-  font-size: 4rem;
-  line-height: 4rem;
-  text-align: center;
-}
-
-@media screen and (min-width: 1920px) {
-  .title {
-    font-size: 5.5rem;
-    line-height: 5.5rem;
-  }
-}
 
 /* ACCENTS */
 
