--- a/src/App.module.css
+++ b/src/App.module.css
@@ -47,18 +47,91 @@
   bottom: 0;
   height: 60%;
   animation-name: fade;
-  animation-duration: 3s;
+  animation-duration: 1s;
 }
 
 .centerContent {
   display: grid;
   place-items: center;
   animation-name: fade;
-  animation-duration: 3s;
+  animation-duration: 1s;
 }
 
 .socialIcons {
   display: none;
+}
+
+.mobile {
+  position: fixed;
+  color: white;
+  background-color: black;
+  overflow: hidden;
+  height: 100vh;
+  width: 100vw;
+  z-index: 1000;
+}
+
+.mobile button {
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 1rem;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+.closeIcon {
+  font-size: 2rem;
+  font-weight: 900;
+}
+
+.mobileNav {
+  display: flex;
+  justify-content: flex-end;
+  height: 20vh
+}
+
+.mobileBody {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 900;
+  font-size: 3rem;
+  line-height: 3rem;
+  padding: 2rem 2rem;
+  text-align: center;
+  height: 60vh;
+}
+
+@media screen and (max-width: 375px) {
+  .mobileBody {
+    font-weight: 900;
+    font-size: 2rem;
+    padding: 3rem;
+  }
+}
+
+.mobileBody h3 {
+  z-index: -10;
+}
+
+.mobileBody a {
+  color: white;
+  text-decoration: none;
+}
+
+.mobileFooter {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 20vh;
+}
+
+.mobileFooter img {
+  width: 60px;
+  height: 60px;
+  padding: 0.25rem;
 }
 
 .red {
@@ -66,6 +139,10 @@
 }
 
 .purple {
+  display: none;
+}
+
+.blue {
   display: none;
 }
 
@@ -97,7 +174,7 @@
 /* PANEL STYLES */
 @media screen and (min-width: 1100px) {
 
-  .hamburger {
+  .hamburger, .mobile {
     display: none;
   }
 
@@ -129,7 +206,7 @@
     display:flex;
     flex-direction:column;
     width:4%;
-    transition: all 0.8s ease;
+    transition: all 0.5s ease;
     height: 85vh;
     overflow-y: scroll;
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
@@ -176,11 +253,15 @@
     "floor floor societyDraw societyDraw "
     "drawPackage drawPackage mysteryPackage brunchBets";
     animation-name: fade;
-    animation-duration: 3s;
+    animation-duration: 2s;
   }
 
-  .roadmapGrid img{
+  .roadmapGrid img {
     width: 100px;
+  }
+
+  .roadmapGrid p {
+    font-weight: 300;
   }
 
   .roadmapTitle {
@@ -248,6 +329,108 @@
     width: 200px;
   }
 
+  .faqGrid {
+    color: white;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    height: 100%;
+    grid-template-areas:
+    "title title"
+    "accordion whitePaper"
+    "accordion mailingList"
+    "accordion pfpGirl";
+    animation-name: fade;
+    animation-duration: 5s;
+  }
+
+  .faqTitle {
+    grid-area: title;
+  }
+
+  .faqTitle h3 {
+    font-size: 3rem;
+    padding: 4rem 4rem;
+  }
+
+  .whitepaper {
+    display: flex;
+    grid-area: whitePaper;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .whitepaper a {
+    color: white;
+    text-decoration: none;
+  }
+
+  .whitepaper a:hover, .mailingList h5:hover {
+    color: red;
+  }
+
+  .whitepaper h5{
+    font-weight: 500;
+    font-size: 3rem;
+    line-height: 3rem;
+    padding: 1rem;
+    text-align: center;
+  }
+
+  .mailingList {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-area: mailingList;
+  }
+
+  .mailingList h5 {
+    font-weight: 500;
+    font-size: 3rem;
+    line-height: 3rem;
+    padding: 1rem;
+    text-align: center;
+  }
+
+  .pfpGirl {
+    display: grid;
+    justify-content: center;
+    align-items: flex-end;
+    grid-area: pfpGirl;
+  }
+
+  .pfpGirl img {
+    width: 100%;
+    transform: scale(-1, 1);
+  }
+
+  .accordion {
+    padding: 3rem;
+    width: 500px;
+    margin: 0 auto;
+    grid-area: accordion;
+  }
+
+  .item {
+    margin-bottom: 5px;
+    padding: 10px 20px;
+  }
+
+  .question {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .question h5 {
+    font-size: 1.5rem;
+  }
+
+  .answer p {
+    padding: 0.5rem 0;
+    font-weight: 200;
+  }
+
   .teamGrid {
     color: #291381;
     display: grid;
@@ -311,6 +494,21 @@
     padding: 2rem 2rem;
   }
 }
+
+/* @media screen and (min-width: 1400px) {
+  .faqGrid {
+    color: white;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    height: 100%;
+    grid-template-areas:
+    "title title"
+    "accordion whitePaper"
+    "accordion pfpGirl";
+    animation-name: fade;
+    animation-duration: 3s;
+  }
+} */
 
 /* RESIZE IMAGE FOR DIFFERENT SCREEN SIZES */
 @media screen and (min-width: 360px) {
