--- a/src/App.module.css
+++ b/src/App.module.css
@@ -69,6 +69,26 @@
   height: 100vh;
   width: 100vw;
   z-index: 1000;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  font-weight: 900;
+  font-size: 3rem;
+  line-height: 3rem;
+  padding: 2rem 2rem;
+  text-align: center;
+}
+
+.mobile a {
+  color: white;
+  text-decoration: none;
+}
+
+.mobile img {
+  height: 60px;
+  width: 60px;
+  padding: 0.4rem;
 }
 
 .mobile button {
@@ -82,30 +102,11 @@
 }
 
 .closeIcon {
+  position: absolute;
+  right: 2rem;
+  top: 2rem;
   font-size: 2rem;
   font-weight: 900;
-}
-
-.mobileNav {
-  display: flex;
-  justify-content: flex-end;
-  height: 10vh
-}
-
-.mobileBody {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: 900;
-  font-size: 3rem;
-  line-height: 3rem;
-  padding: 2rem 2rem;
-  text-align: center;
-  height: 90vh;
-}
-
-.mobileBody h3 {
-  padding-bottom: 2rem;
 }
 
 @media screen and (max-width: 375px) {
